Slides de introducción

--- a/TDC/clases/intro/introduccion.tex
+++ b/TDC/clases/intro/introduccion.tex
@@ -30,15 +30,43 @@
 
 \begin{document}
 
-\title[Presentación del curso]{Teoría de la Computación \\ 2-2025}
-\author[Teoría de la Computación]{Consuelo Ramírez \\ Cristóbal Loyola}
+\title[Presentación del curso]{Teoría de la Computación \\ Semestre 2-2025}
+\author[Teoría de la Computación]{\textbf{Profesores:}\\ Consuelo Ramírez \\
+  Cristóbal Loyola}
 % \date{28 de marzo de 2025}
 \date{}
+
+\titlegraphic{
+  \vspace{-2cm}
+  \begin{figure}
+    \centering
+    \begin{subfigure}{0.24\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{images/ada_lovelace.jpg}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.24\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{images/frege.jpg}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.24\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{images/turing.jpg}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.24\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{images/grace_hopper.jpg}
+    \end{subfigure}
+  \end{figure}
+}
+
 \frame{\titlepage}
 
 \begin{frame}{Resultados de aprendizaje general}
   Resolver problemas en contextos variados aplicando conceptos de la Teoría de
-  la computación por medio de la representación y reconocimiento de
+  la Computación por medio de la representación y reconocimiento de
   \textbf{lenguajes formales, modelos de lógica clásica/difusa, computabilidad y
     complejidad computacional}; desarrollando la capacidad de adaptación a las
   condiciones de cada problema y los recursos disponibles, resguardando el
@@ -65,34 +93,34 @@
 \begin{frame}{Unidades}
   \begin{enumerate}[<+->]
     \item Lógica $\rightarrow$ (6 clases + 3 ayudantías)
-    \item Lenguajes Regulares (LR)  $\rightarrow$ (8 clases + 3 ayudantías)
-    \item Lenguajes Independientes del Contexto (LIC) $\rightarrow$ (6 clases +
+    \item Lenguajes Regulares $\rightarrow$ (8 clases + 3 ayudantías)
+    \item Lenguajes Independientes del Contexto $\rightarrow$ (6 clases +
           1 ayudantía)
     \item Computabilidad y Complejidad $\rightarrow$ (8 clases + 3 ayudantías)
   \end{enumerate}
 
-\begin{figure}
-    \centering
-    \begin{subfigure}{0.24\textwidth}
-        \centering
-        \includegraphics[width=\linewidth]{images/ada_lovelace.jpg}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}{0.24\textwidth}
-        \centering
-        \includegraphics[width=\linewidth]{images/frege.jpg}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}{0.24\textwidth}
-        \centering
-        \includegraphics[width=\linewidth]{images/turing.jpg}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}{0.24\textwidth}
-        \centering
-        \includegraphics[width=\linewidth]{images/grace_hopper.jpg}
-    \end{subfigure}
-  \end{figure}
+  % \begin{figure}
+  %   \centering
+  %   \begin{subfigure}{0.24\textwidth}
+  %       \centering
+  %       \includegraphics[width=\linewidth]{images/ada_lovelace.jpg}
+  %   \end{subfigure}
+  %   \hfill
+  %   \begin{subfigure}{0.24\textwidth}
+  %       \centering
+  %       \includegraphics[width=\linewidth]{images/frege.jpg}
+  %   \end{subfigure}
+  %   \hfill
+  %   \begin{subfigure}{0.24\textwidth}
+  %       \centering
+  %       \includegraphics[width=\linewidth]{images/turing.jpg}
+  %   \end{subfigure}
+  %   \hfill
+  %   \begin{subfigure}{0.24\textwidth}
+  %       \centering
+  %       \includegraphics[width=\linewidth]{images/grace_hopper.jpg}
+  %   \end{subfigure}
+  % \end{figure}
 \end{frame}
 
 
@@ -130,13 +158,17 @@
 
 \begin{frame}{Bibliografía}
   \begin{itemize}
+    \item Aho, A., Lam, M., Sethi, R. y Ullman, J. (2008). Compiladores:
+          Principios, técnicas y herramientas (2a ed.). Pearson Addison Wesley.
     \item Garrido, M. (2001). Lógica simbólica (4a ed.). Tecnos.
     \item Hopcroft, J., Motwani, R. y Ullman, J. (2002). Introducción a la
           Teoría de Autómatas, Lenguajes y Computación (2a ed.). Addison Wesley.
-    \item Zhang, H., Zhang, J. (2024). Logic in Computer Science (2024th ed.).
-          Springer.
+    \item Lewis, H. \& Papadimitriou, C. (1998). Elements of the Theory of
+          Computation (2nd ed.). Upper Saddle River: Prentice-Hall.
     \item Sipser, M. (2013). Introduction to the Theory of Computation (3a ed.).
           Cengage Learning.
+    \item Zhang, H., Zhang, J. (2024). Logic in Computer Science (2024th ed.).
+          Springer.
   \end{itemize}
 \end{frame}
 
