Unidad 1, lógica proposicional

--- a/TDC/clases/intro/introduccion.tex
+++ b/TDC/clases/intro/introduccion.tex
@@ -91,13 +91,20 @@
 
 
 \begin{frame}{Unidades}
-  \begin{enumerate}[<+->]
+  \begin{enumerate}
     \item Lógica $\rightarrow$ (6 clases + 3 ayudantías)
     \item Lenguajes Regulares $\rightarrow$ (8 clases + 3 ayudantías)
     \item Lenguajes Independientes del Contexto $\rightarrow$ (6 clases +
           1 ayudantía)
     \item Computabilidad y Complejidad $\rightarrow$ (8 clases + 3 ayudantías)
   \end{enumerate}
+
+  \vspace{.5cm}
+  \begin{itemize}
+    \item \textbf{Profesor Unidades 1 y 4:} Cristóbal Loyola
+    \item \textbf{Profesora Unidades 2 y 3:} Consuelo Ramírez
+    \item \textbf{Ayudante:} Javiera Vergara
+  \end{itemize}
 
   % \begin{figure}
   %   \centering
