Unidad 1: lógica proposicional (sintaxis)

--- a/TDC/clases/unidad_01/clase_01.tex
+++ b/TDC/clases/unidad_01/clase_01.tex
@@ -34,8 +34,8 @@
 \begin{document}
 
 \title[Lógica proposicional]{Teoría de la Computación \\ Unidad 1: Lógica
-  proposicional} \author[Teoría de la Computación]{cristobal.loyola@usach.cl}
-\date{}
+  proposicional (parte 1)} \author[Teoría de la
+Computación]{cristobal.loyola@usach.cl} \date{}
 
 \titlegraphic{
   \vspace{-1.5cm}
@@ -51,8 +51,9 @@
 
 \begin{frame}{Contenidos}
   \begin{itemize}
-    \item Contenido 1
-    \item Contenido 2
+    \item Formas de razonamiento y tipos de lógica.
+    \item Lógica proposicional (repaso).
+    \item Deducción natural.
   \end{itemize}
 \end{frame}
 
