--- a/TDC/clases/intro/introduccion.tex
+++ b/TDC/clases/intro/introduccion.tex
@@ -74,20 +74,20 @@
 \end{frame}
 
 
-\begin{frame}{Resumen del curso}
-  \begin{itemize}[<+->]
-    \item Desarrollar herramientas matemáticas para entender algoritmos y
-          procesos computacionales.
-    \item Analizar lenguajes formales y gramáticas, lo que es fundamental para
-          entender el funcionamiento de lenguajes de programación y
-          compiladores.
-    \item Explorar qué significa que un problema sea computable, a través de
-          modelos como autómatas y máquinas de Turing. Entender las
-          limitaciones de estos modelos.
-    \item Analizar los recursos (tiempo y espacio) requeridos para computar y
-          clasificar problemas basado en su complejidad computacional.
-  \end{itemize}
-\end{frame}
+% \begin{frame}{Resumen del curso}
+%   \begin{itemize}[<+->]
+%     \item Desarrollar herramientas matemáticas para entender algoritmos y
+%           procesos computacionales.
+%     \item Analizar lenguajes formales y gramáticas, lo que es fundamental para
+%           entender el funcionamiento de lenguajes de programación y
+%           compiladores.
+%     \item Explorar qué significa que un problema sea computable, a través de
+%           modelos como autómatas y máquinas de Turing. Entender las
+%           limitaciones de estos modelos.
+%     \item Analizar los recursos (tiempo y espacio) requeridos para computar y
+%           clasificar problemas basado en su complejidad computacional.
+%   \end{itemize}
+% \end{frame}
 
 
 \begin{frame}{Unidades}
@@ -150,7 +150,7 @@
     \end{column}
   \end{columns}
 
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \vspace{0.3cm}
     \item El curso tiene 5 SCT y TEL: 4-2-0
     \item La condición para rendir la PDR es tener un promedio de PEPs mayor o
